--- a/build.gradle
+++ b/build.gradle
@@ -19,14 +19,18 @@ buildscript {
     }
 }
 plugins {
-    id 'com.android.application' version '7.3.0' apply false
-    id 'com.android.library' version '7.3.0' apply false
+    id 'com.android.application' version '7.2.1' apply false
+    id 'com.android.library' version '7.2.1' apply false
 }
 
 allprojects {
     repositories {
         google()
         mavenCentral()
+        maven {       // add this repo to use snapshots
+            name 'ossrh-snapshot'
+            url 'https://oss.sonatype.org/content/repositories/snapshots'
+        }
     }
 }
 
